--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@
   <body>
     <section>
       <div>1</div>
-      <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit magnam doloribus earum sint ut, quis tempora maxime magni eius eveniet laboriosam nemo minima nulla quaerat eum adipisci, necessitatibus totam pariatur asperiores, sequi similique sunt! Corrupti ea ab quia dolorum doloremque debitis tempore, a in soluta quae porro ad consectetur veritatis!</div>
+      <div>2</div>
       <div>3</div>
       <div>4</div>
       <div>5</div>
       <div>6</div>
       <div>7</div>
-      <div>
-        <h2>Lorem, ipsum dolor.</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque qui dolor voluptas dicta, voluptates quibusdam odio rem aliquam minus culpa saepe. In quasi reprehenderit maiores velit! Repellat alias excepturi qui.</p>
-        <img src="https://picsum.photos/id/1050/200" alt="">
-      </div>
+      <div>8</div>
       <div>9</div>
     </section>
   </body>
