--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <section>
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-    </section>
+    <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus tempore, blanditiis qui error cumque vitae culpa sed tenetur nam cum suscipit ipsum eos eaque! Repellendus quae blanditiis consequuntur autem?</p>
+    <img src="https://picsum.photos/id/1035/100" data-photo>
+
+    <h1 class="title" id="heading" data-something>homepage</h1>
   </body>
 </html>
