--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <script src="./main.js" defer></script>
   </head>
   <body>
-    <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi doloribus tempore, blanditiis qui error cumque vitae culpa sed tenetur nam cum suscipit ipsum eos eaque! Repellendus quae blanditiis consequuntur autem?</p>
-    <img src="https://picsum.photos/id/1035/100" data-photo>
-
-    <h1 class="title" id="heading" data-something>homepage</h1>
+    <h1>homepage</h1>
+    <!-- <figure id="image-holder"></figure> -->
   </body>
 </html>
